fix tests - forbidden api issue